--- a/.gitignore
+++ b/.gitignore
@@ -264,4 +264,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+*.vscode
+
 # End of https://www.toptal.com/developers/gitignore/api/react,node,linux,macos,windows,dotenv,visualstudiocode,git
