--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.10",
     "@mui/styled-engine": "^5.11.9",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
