--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.10",
     "@mui/styled-engine": "^5.11.9",
+    "firebase": "^9.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.8.1",
+    "vite-jsconfig-paths": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
